tests/invalid/List_Invalid_1.whiley
import * from whiley.lang.*

method main(System.Console sys) -> void:
    int x = 1
    a2[0] = x
